[gd_scene load_steps=2 format=3 uid="uid://do7a0we212jsp"]

[ext_resource type="Script" uid="uid://bll3ts1huagh6" path="res://scripts/login_page_script.gd" id="1_0oykn"]

[node name="login_page" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0oykn")

[node name="login_panel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -99.5
offset_right = 163.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2

[node name="username_label" type="Label" parent="login_panel"]
layout_mode = 2
text = "username"

[node name="username_input" type="LineEdit" parent="login_panel"]
layout_mode = 2
placeholder_text = "username"
context_menu_enabled = false
emoji_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true

[node name="password_label" type="Label" parent="login_panel"]
layout_mode = 2
text = "password"

[node name="password_input" type="LineEdit" parent="login_panel"]
layout_mode = 2
placeholder_text = "password"
context_menu_enabled = false
emoji_menu_enabled = false
middle_mouse_paste_enabled = false
caret_blink = true
secret = true
secret_character = "*"

[node name="login_button" type="Button" parent="login_panel"]
layout_mode = 2
text = "Login"

[connection signal="pressed" from="login_panel/login_button" to="." method="_on_login_button_pressed"]
